[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/Font/Minecraft.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://MainMenu.gd" type="Script" id=2]
[ext_resource path="res://assets/Treasure-Chest-500x333.jpeg" type="Texture" id=3]
[ext_resource path="res://scenes/UI/ControlMainMenu.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Treasure-Chest-500X333" type="Sprite" parent="."]
position = Vector2( 512.5, 298.75 )
scale = Vector2( 2.066, 1.85135 )
texture = ExtResource( 3 )

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
margin_left = 313.0
margin_top = 148.0
margin_right = 446.0
margin_bottom = 322.0
rect_scale = Vector2( 3, 3 )

[node name="Label" type="Label" parent="Control/VBoxContainer"]
margin_right = 133.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 1 )
text = "FIND TREASURE"
align = 1
valign = 1

[node name="PlayButton" type="Button" parent="Control/VBoxContainer"]
margin_top = 20.0
margin_right = 133.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 2 )
text = "Play"

[node name="AboutButton" type="Button" parent="Control/VBoxContainer"]
margin_top = 46.0
margin_right = 133.0
margin_bottom = 68.0
custom_fonts/font = SubResource( 2 )
text = "About"

[node name="QuitButton" type="Button" parent="Control/VBoxContainer"]
margin_top = 72.0
margin_right = 133.0
margin_bottom = 94.0
custom_fonts/font = SubResource( 2 )
text = "Quit"
